--- a/Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/angular.json
+++ b/Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/angular.json
@@ -23,9 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": ["Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
