--- a/Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/angular.json
+++ b/Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/angular.json
@@ -24,9 +24,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": ["Proyecto_Integrador_Gonzalez_Lautaro_Ezequiel/node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
